fixed card z-index on hover

--- a/wp-content/themes/pelske/style.css
+++ b/wp-content/themes/pelske/style.css
@@ -587,12 +587,20 @@ label {
 }
 .card {
   perspective: 40rem;
+  position: relative;
+  z-index: 0;
+  transition: z-index;
+  transition-delay: 0.3s;
   font-size: 0.75em;
 }
 .card-body {
   display: flex;
   transform-style: preserve-3d;
   transition: transform 0.3s ease-in-out;
+}
+.card:hover {
+  transition-delay: 0s;
+  z-index: 1;
 }
 .card:hover > .card-body,
 .card:focus > .card-body {
@@ -624,7 +632,7 @@ label {
   color: #fff;
 }
 .card-title {
-  top: 0; left: 0;
+  top: 1px; left: 1px;
   word-wrap: break-word;
 }
 .card-subtitle {
